fix overflow hidden

--- a/client/src/assets/styles/global/main.scss
+++ b/client/src/assets/styles/global/main.scss
@@ -5,6 +5,7 @@
 
 html {
   height: 100%;
+  width: 100%;
   font-size: 62.5%;
 }
 
@@ -16,6 +17,7 @@ html {
 
 body {
   height: 100%;
+  width: 100%;
   line-height: inherit !important;
 }
 
